--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
 
   <body>
-
+    <header>
+        <nav>
+          <h3>Life is a box of chocolates</h3> 
+          <ul>
+            <li>
+            </li> 
+          </ul> 
+        </nav> 
+    </header> 
   </body>
 </html>
