automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
   <body>
     <header>
         <nav>
-          <h3>Life is a box of chocolates</h3> 
+          <h3>Life is a box of chocolates</h3>
           <ul>
-            <li>
-              <li> 
-              </li> 
-            </li>
+            <li>Example</li>
+            <li>Click here</li>
           </ul>
         </nav>
     </header>
